fix appendices crefs

--- a/appendix.tex
+++ b/appendix.tex
@@ -1,4 +1,6 @@
 \begin{appendices}
+\crefalias{section}{appsec}
+
 \chapter{- Introduction to Machine Learning}\label{appx:introMachineLearning}
 
 \section{Heaviside Function}\label{appx:sec:heaviside}
