--- a/ch_machine_learning.tex
+++ b/ch_machine_learning.tex
@@ -344,7 +344,7 @@ For analytical convenience, a tractable transformation $h(z)$ for this task is t
 
 The logistic function has the advantage of being smooth, well defined for all real numbers and with the image of $\mathbb{R}$ under it being $(0,1)$.
 This property lends itself to reading outputs as probabilities of the target belonging to a certain class.
-It is also an approximation of the Heaviside step function (see \cref{appx:sec:heaviside} form more details on this relationship).
+It is also an approximation of the Heaviside step function (see \cref{appx:sec:heaviside} for more details on this relationship).
 
 If we let $t_i = \theta \cdot x_i \ \forall \, i $ be the linear decision boundary of each sample and use the logistic function as our activation, we have that for the supervised binary classification setting the ideal situation, one in which all samples are correctly classified, appears when we have that %$$
 % we have that, in an ideal situation,
