add cleveref name for appendices

--- a/preamble.tex
+++ b/preamble.tex
@@ -288,6 +288,7 @@ pdfkeywords={machine learning}
 \crefname{enumerate}{Enumeration}{Enumerations}
 \crefname{stepsi}{Step}{Steps}
 \crefname{problem}{Problem}{Problems}
+\crefname{appsec}{Appendix}{Appendices}
 
 % Uncommenting this brings problems when referrencing equations.
 %\crefname{equation}{}{}
